2014-12-02  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc.el and all backends: API simplification; clear-headers
	is no longer a public method.  It is now local to the one place
	it's used, in the RCS steal-lock method.

2014-12-01  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc.el and all backends: API simplification; could-register
	is no longer a public method.  (vc-cvs.el still has a private
	implementation.)

	* vc/vc.el and all backends: API cleanup; the backend diff method
	takes an explicit async flag.  This eliminates a particularly ugly
	global.

	* vc-bzr.el: Restore vc-bzr-state-heuristic as a private method.
	VC randomly/unpredictable fails without it; cause not yet established.

2014-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	Merge some of the differences from the standalone CC-mode.
	The main change is to only use the `category' text-property only when
	available.  For that many calls are changed to use c-get-char-property,
	c-next-single-property-change, c-sc-scan-lists,
	c-sc-parse-partial-sexp, c-unmark-<->-as-paren.

	* progmodes/cc-mode.el (c-just-done-before-change): New var.
	(c-basic-common-init): Initialize it.
	(c-common-init): Only use mode-require-final-newline when available.
	(c-before-change): Check and set c-just-done-before-change.
	(c-after-change): Re-set c-just-done-before-change.
	(c-advise-fl-for-region): New macro.
	(lazy-lock-defer-rest-after-change, lazy-lock-defer-line-after-change)
	(font-lock-after-change-function, jit-lock-after-change):
	Advise if needed.

	* progmodes/cc-langs.el (c-modified-constant): New lang var.
	(c-known-type-key): Don't make a list just to throw it away.

	* progmodes/cc-engine.el (c-invalidate-state-cache, c-parse-state):
	Handle the case where categories are not available.
	(c-record-parse-state-state, c-replay-parse-state-state):
	Handle marker values.
	(c-before-change-check-<>-operators): Look for the `syntax-table'
	property rather than for the corresponding `category'.